# grejem-os-hub

./: .gitignore  README.md
.github/workflows/: release.yml
frontend/: index.html
frontend/css/: hub.css
frontend/js/: apps.js  hub.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
